--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <h1>Multi-Tenant Learning Management System</h1>
 <p>Click the image to visit the LMS website</p>
 
-<a href="https://www.google.com" target="_blank">
+<a href="https://moodle.org" target="_blank">
+
 
     <img src="lms_dashboard.png" alt="Mini LMS Dashboard">
 </a>
