--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 <h1>Multi-Tenant Learning Management System</h1>
 <p>Click the image to visit the LMS website</p>
 
-<a href="https://moodle.org" target="_blank">
-
+<a href="https://alison.com" target="_blank">
 
     <img src="lms_dashboard.png" alt="Mini LMS Dashboard">
 </a>
