--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
         body {
             text-align: center;
             font-family: Arial, sans-serif;
-            background-color: #f2f4f7;
+            background-color: #f4f6f8;
         }
         img {
-            width: 80%;
-            max-width: 900px;
+            width: 90%;
+            max-width: 1000px;
             cursor: pointer;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.3);
         }
     </style>
 </head>
 <body>
 
 <h1>Multi-Tenant Learning Management System</h1>
-<p>Click the image to visit the LMS website</p>
+<p>Click the image to open the website</p>
 
 <a href="https://www.google.com" target="_blank">
-
-    <img src="lms_dashboard.png" alt="Mini LMS Dashboard">
+    <img src="ppt.jpeg" alt="Mini LMS Dashboard">
 </a>
 
 </body>
 </html>
+
